--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "NODE_ENV=development vite",
+    "start": "vite",
     "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watchAll",
