--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "serve": "vite preview"
   },
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
+    "@sveltejs/vite-plugin-svelte": "^2.4.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@types/jest": "^27.0.2",
@@ -25,7 +25,7 @@
     "svelte-preprocess": "^4.6.9",
     "ts-jest": "^27.0.7",
     "typescript": "^4.2.3",
-    "vite": "^2.1.0"
+    "vite": "^4.5.1"
   },
   "dependencies": {
     "tailwindcss": "^3.3.5"
