--- a/package.json
+++ b/package.json
@@ -1,29 +1,31 @@
 {
   "name": "sttv",
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "NODE_ENV=development vite",
     "start": "vite",
     "build": "vite build",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watchAll",
     "serve": "vite preview"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^6.1.0",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/svelte": "^3.0.3",
-    "@types/jest": "^27.0.2",
+    "@testing-library/jest-dom": "^6.6.4",
+    "@testing-library/svelte": "^5.2.8",
+    "@types/jest": "^29.5.12",
     "autoprefixer": "^10.4.16",
-    "babel-jest": "^27.3.1",
+    "babel-jest": "^29.7.0",
     "cssnano": "^6.0.1",
-    "jest": "^27.3.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^30.0.5",
     "postcss": "^8.4.31",
     "postcss-load-config": "^4.0.1",
     "svelte": "^5.38.0",
-    "svelte-jester": "^2.1.5",
+    "svelte-jester": "^5.0.0",
     "svelte-preprocess": "^6.0.3",
-    "ts-jest": "^27.0.7",
+    "ts-jest": "^29.4.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.0"
   },
